# csv-query

./: Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: docs.yml
src/: aggregate.rs  cli.rs  collection.rs  error.rs  main.rs  model.rs  prompt.rs  source.rs
